--- a/preamble_p.tex
+++ b/preamble_p.tex
@@ -2,6 +2,8 @@
 %適宜\documentclass[a4paper,11pt]{jsarticle}を書いた下に、
 %\input{}を使ってこのプリアンブル・ファイルを読み込む
 %同じフォルダ内に入れてほしいです（pathとか環境によってだるいんで）
+%test
+
 
 %-----グラフィック------------------------------------------------------
 %呪文
