DeclareMathOperator用のDMO.texファイルを作成しました。preamble_p.texのamsmathを読み込んだ直後にinputするようにしています。

--- a/preamble_p.tex
+++ b/preamble_p.tex
@@ -25,6 +25,7 @@
 
 % 数式, 米国数学会が開発したのがamsmath, フォントを使うためのパッケージがamssymbs
 \usepackage{amsmath,amssymb}
+\input{DMO.tex}
 %定理環境、コピペ
 \usepackage{amsthm}
 \theoremstyle{definition}
